# ParaViewConnect

./: .gitignore  LICENSE  README.md  pvconnect.sublime-project  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
pvconnect/: __init__.py  cli.py  connect.py  connection.py  generate.py  version.py
scripts/: create_virtualenv.bat  create_virtualenv.bsh  pvcluster_launcher.bat  pvcluster_launcher.bsh  pvcluster_launcher.py  pvcluster_vslauncher.bsh  pvcluster_vslauncher.py  pvconnect_config.bsh  pvserver_launcher.bat  pvserver_launcher.bsh  pvserver_launcher.py  pvserver_vslauncher.bsh  pvserver_vslauncher.py  sublime
share/: servers-windows.pvsc  servers.pvsc
