[metadata]
name = paraview-connect
description = "Helper tool and library for connecting to remote Paraview sessions"
author = "Zenotech"
author_email = "support@zenotech.com"
Home-page = https://github.com/zenotech/ParaViewConnect/
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True
install_requires =
    fabric>=2.6.0
    click>=7.1.2

[options.entry_points]
console_scripts =
    paraview-connect = pvconnect.cli:main